syntax = "proto3";

option csharp_namespace = "Skyra.Grpc.Services";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "shared.proto";

package YoutubeSubscription;

service YoutubeSubscription {
  rpc ManageSubscription(SubscriptionManageQuery) returns (Result);
  rpc GetSubscriptions(GetSubscriptionsQuery) returns (SubscriptionListResult);
  rpc UpdateSubscriptionSettings(NotificationSettingsUpdateQuery) returns (Result);
  rpc SubscriptionNotifications(google.protobuf.Empty) returns (stream SubscriptionNotificationResult);
  rpc UnsubscribeFromAll(UnsubscribeFromAllQuery) returns (Result);
}

enum Action {
  subscribe = 0;
  unsubscribe = 1;
}

message SubscriptionManageQuery {
  string youtube_channel_url = 1;
  string guild_id = 2;
  string notification_message = 3;
  string guild_channel_id = 4;
  Action type = 5;
}

message Subscription {
  string youtube_channel_id = 1;
  string youtube_channel_title = 2;
}

message SubscriptionListResult {
  Status status = 1;
  repeated Subscription Subscriptions = 2;
}

message SubscriptionNotificationResult {
  string video_id = 1;
  string video_title = 2;
  string thumbnail_url = 3;
  string youtube_channel_name = 4;
  google.protobuf.Timestamp published_at = 5;
  repeated NotificationChannel channels = 6;
}

message NotificationChannel {
  string guild_id = 1;
  string discord_channel_id = 2;
  string content = 3;
}

message GetSubscriptionsQuery {
  string guild_id = 1;
}

message NotificationSettingsUpdateQuery {
  string message = 1;
  string discord_channel_id = 2;
  string guild_id = 3;
}

message UnsubscribeFromAllQuery {
  string guild_id = 1;
}
